Implemented full wireup for AcctCreation functionality.
Fixed some Data Access Layer issues.

Laid out preliminary Player models

Restructured client side api interfaces

Implemented status response interceptor

--- a/Source/Data/Tandem.Data/Tandem.Data.csproj
+++ b/Source/Data/Tandem.Data/Tandem.Data.csproj
@@ -10,10 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataFiles\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.9" />
   </ItemGroup>
 
@@ -24,7 +20,7 @@
     <None Update="DataFiles\Apprentice_TandemFor400_Data.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="DataFiles\Player.Json">
+    <None Update="DataFiles\Player.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="DataFiles\PlayerAnswer.json">
