--- a/Source/Infrastructure/Tandem.Infrastructure/Tandem.Infrastructure.csproj
+++ b/Source/Infrastructure/Tandem.Infrastructure/Tandem.Infrastructure.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+	<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
