Implemented Resume Game functionality.
Restructured some client end files.

Fixed some data access layer oversights with the Repos.

Restructured the player-related routes

--- a/Source/WebService/Web.config
+++ b/Source/WebService/Web.config
@@ -10,8 +10,12 @@
 					<match url="account/login$" ignoreCase="true" />
 					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
 				</rule>
-				<rule name="Redirect from playermenu to landing page" stopProcessing="true">
-					<match url="playermenu" ignoreCase="true" />
+				<rule name="Redirect from player/menu to landing page" stopProcessing="true">
+					<match url="player/menu" ignoreCase="true" />
+					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
+				</rule>
+				<rule name="Redirect from player/history to landing page" stopProcessing="true">
+					<match url="player/history$" ignoreCase="true" />
 					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
 				</rule>
 				<rule name="Redirect from play to landing page" stopProcessing="true">
