Finalized Account management functionality

--- a/Source/WebService/Web.config
+++ b/Source/WebService/Web.config
@@ -18,6 +18,10 @@
 					<match url="player/history$" ignoreCase="true" />
 					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
 				</rule>
+				<rule name="Redirect from player/account to landing page" stopProcessing="true">
+					<match url="player/account" ignoreCase="true" />
+					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
+				</rule>
 				<rule name="Redirect from play to landing page" stopProcessing="true">
 					<match url="play$" ignoreCase="true" />
 					<action type="Redirect" url="/mainmenu" redirectType="Permanent" />
